added content box and fixed visuals

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -45,28 +45,38 @@
                 </div>
             </div>
         <section id="main-github">
-            <div class="split-left">
-                <h2>Koding på Samme Dokument med GitHub</h2>
-                <p>Github øker effektiviteten når en gruppe skal kode på samme dokument.
-                    Noe viktig å påpeke er at Github gir mulighet for at brukere kan jobbe samtidig uten å 
-                    overskrive andres koder. Effektiviteten og selvstendigheten av å kode samtidig kommer av "branches", som 
-                    er egne kopier av hoved filen, der brukere kan jobbe selv uten å påvirke hovedbranch, ofte kalt "main" branch.
-                </p>
-                <hr class="separator">
-                <h2>Sporing av koder</h2>
-                <p>Alle branches som blir lagd, kan lastes inn på hoved filen via "commits". Der kan 
-                    alle se hvem som har gjort hva på koden, og det som er endret. I tillegg er det overskrifter
-                    i "source controll" som gjør det mulig å lett se hva som er de siste endringene. GitHub-Desktop er en 
-                    app som gjør det mulig å lett finne frem til disse tidligere kodene, og se på endringene som er gjort før
-                    "branches" blir lagt ut.
-                </p>
-            </div>
-            <div class="split-right">
-                <h2>subheading 3:</h2>
-                <h3>text</h3>
-                <hr class="separator">
-                <h2>Subheading 4:</h2>
-                <h3>Text:</h3>
+            <div class="split-container">
+                <div class="split-left">
+                    <div class="content-box">
+                        <h2>Koding på Samme Dokument med GitHub</h2>
+                        <p>Github øker effektiviteten når en gruppe skal kode på samme dokument.
+                            Noe viktig å påpeke er at Github gir mulighet for at brukere kan jobbe samtidig uten å 
+                         overskrive andres koder. Effektiviteten og selvstendigheten av å kode samtidig kommer av "branches", som 
+                         er egne kopier av hoved filen, der brukere kan jobbe selv uten å påvirke hovedbranch, ofte kalt "main" branch.
+                        </p>
+                    </div>    
+                    <hr class="separator centered">
+                    <div class="content-box">
+                        <h2>Sporing av koder</h2>
+                        <p>Alle branches som blir lagd, kan lastes inn på hoved filen via "commits". Der kan 
+                            alle se hvem som har gjort hva på koden, og det som er endret. I tillegg er det overskrifter
+                            i "source controll" som gjør det mulig å lett se hva som er de siste endringene. GitHub-Desktop er en 
+                            app som gjør det mulig å lett finne frem til disse tidligere kodene, og se på endringene som er gjort før
+                            "branches" blir lagt ut.
+                        </p>
+                    </div>    
+                </div>
+                <div class="split-right">
+                    <div class="content-box">
+                        <h2>subheading 3:</h2>
+                        <p>text</p>
+                    </div>    
+                    <hr class="separator centered">
+                    <div class="content-box">
+                        <h2>Subheading 4:</h2>
+                        <p>Text:</p>
+                    </div>    
+                </div>
             </div>
         </section>         
     </article>
