updated footer git page

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -81,74 +81,91 @@
         </section>         
     </article>
     
-    <!-- Footer Menu -->
-    <footer id="footer">
+   <!-- Footer Menu -->
+   <footer id="footer">
 
-        <div class="moreInfo">
-            <div class="row">
-                <div id="col1">
-                    <span id="icon" class="fa fa-map-marker"></span>
+    <div class="moreInfo">
+        <div class="row">
+            <div id="col1">
+                <span id="icon" class="fa fa-map-marker"></span>
 
-                    <span>
-                        <h4>Oslo Metropolitan University</h4>
-                        <p>Storbyuniversitetet</p>
-                        Postboks 4, St. Olavs plass
-                        0130 Oslo
-                    </span>
-                </div>
+                <span>
+                    <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9"><h4>Oslo Metropolitan University</h4></a>
+                    <p>Storbyuniversitetet</p>
+                    Postboks 4, St. Olavs plass
+                    0130 Oslo
+                </span>
+            </div>
 
-                <div id="col2">
-                    <span id="icon" class="fa fa-phone"></span>
+            <div id="col2">
+                <span id="icon" class="fa fa-phone"></span>
 
-                    <span>
-                        <h4>Kontakt oss</h4>
-                        <p>Tlf.: 67 23 50 00</p>
-                    </span>
-                </div>
+                <span>
+                    <h4>Kontakt oss</h4>
+                    <p>Tlf.: 67 23 50 00</p>
+                </span>
+            </div>
 
-                <div id="col3">
-                    <span id="icon" class="fa fa-info"></span>
-                    <span>
-                        <h4> More Info</h4>
-                        <p>
-                            <a class="more-info-links" href="#">English</a><br>
-                            <a class="more-info-links" href="#">Alumni</a><br />
-                            <a class="more-info-links" href="#">Ansatteoversikt</a><br>
-                            <a class="more-info-links" href="#">Arrangementsoversikt</a><br>
-                            <a class="more-info-links" href="#">For ansatte</a><br>
-                            <a class="more-info-links" href="#">For studenter</a><br>
-                            <a class="more-info-links" href="#">Ledige stillinger</a><br>
-                            <a class="more-info-links" href="#">Personvernerklæring og <br> informasjonskapslar</a><br>
-                            <a class="more-info-links" href="#">Pressekontakt</a><br>
-                            <a class="more-info-links" href="#">Tilgjengelegheitserklæring</a><br>
-                            <a class="more-info-links" href="#">Admin</a><br>
-
-                        </p>
-                    </span>
-                </div>
+            <div id="col3">
+                <span id="icon" class="fa fa-info"></span>
+                <span>
+                    <h4> More Info</h4>
+                    <div class="more-info-tab">
+                        <button id="toggle-tab" class="more-info-tab-button">
+                            <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                viewBox="2 1 20 20">
+                                <path fill-rule="evenodd"
+                                    d="M12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293 1.414 1.414L12 17.414z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div id="more-info-tab" class="more-info-tabcontent">
+                        <a class="more-info-links" href="https://www.oslomet.no/en">English</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/alumni">Alumni</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/ansatteoversikt">Ansatteoversikt</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/arrangement/arrangementsoversikt">Arrangementsoversikt</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/for-ansatte">For ansatte</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/for-studenter">For
+                            studenter</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/ledige-stillinger">Ledige
+                            stillinger</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/personvernerklering-informasjonskapslar">Personvernerklæring
+                            og <br> informasjonskapslar</a>
+                        <a class="more-info-links" href="https://www.oslomet.no/om/pressekontakt">Pressekontakt</a>
+                        <a class="more-info-links"
+                            href="https://www.oslomet.no/om/tilgjengelegheitserklering">Tilgjengelegheitserklæring</a>
+                        <a class="more-info-links"
+                            href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
+                    </div>
+                    <script src="javascript/index-tabs"></script>
+                </span>
             </div>
         </div>
-        <!-- Social Media links -->
-        <div class="mediabox">
+    </div>
+    <!-- Social Media links -->
+    <div class="mediabox">
 
-            <ul class="media">
-                <li>
-                    <a href="https://x.com/oslomet" class="fa fa-twitter"> </a>
-                </li>
+        <ul class="media">
+            <li>
+                <a href="https://x.com/oslomet" class="fa fa-twitter"> </a>
+            </li>
 
-                <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"></a>
-                </li>
+            <li>
+                <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook"></a>
+            </li>
 
-                <li>
-                    <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"></a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"></a>
-                </li>
-            </ul>
-        </div>
-    </footer>
+            <li>
+                <a href="https://no.linkedin.com/school/oslomet/" class="fa fa-linkedin"></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram"></a>
+            </li>
+        </ul>
+    </div>
+</footer>
 
 </body>
 
