--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -10,22 +10,26 @@
 </head>
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <div class="img-container">
-        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
-    </div>
+    <a href="https://www.oslomet.no/" class="img-container">
+        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+    </a>
     <nav>
-        <div class="dropdown" style="float:right;">
+        <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search"></i></a>
+        <div class="dropdown">
             <button class="dropbtn"><i class="fa fa-bars"></i></button>
             <div class="dropdown-content">
-                 <a href="#">Studier</a> 
-                 <a href="#">Forskningen vår</a> 
-                 <a href="#">Universitetsbibliotek</a> 
-                 <a href="#">For studenter</a> 
-                 <a href="activity.html">Activity</a> 
-                 <a href="accessibility.html">Accessibility</a> 
-                 <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a> 
+                <a href="https://www.oslomet.no/studier">Studier</a>
+                <a href="https://www.oslomet.no/forskning">Forskningen vår</a>
+                <a href="https://www.oslomet.no/om/samarbeid">Samarbeid</a>
+                <a href="https://www.oslomet.no/ub">Universitetsbibliotek</a>
+                <a href="https://www.oslomet.no/om">Om OsloMet</a>
+                <a href="https://www.oslomet.no/om/for-studenter">For studenter</a>
+                <a href="https://www.oslomet.no/om/kontakt">Kontakt</a>
+                <a href="other-pages/activity.html">Activity</a>
+                <a href="other-pages/accessibility.html">Accessibility</a>
+                <a href="other-pages/github.html">GitHub</a>
             </div>
-          </div>
+        </div>
     </nav>
 </header>
 
