changed accessibility git img

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -36,13 +36,13 @@
 <body>
     <article id="main">
         <h1>Presentasjon av Github</h1>
-            <div class="video-container-github">
-                <div class="video-item">
+            <div class="img-container-github">
+                <div class="img-item">
                     <h2>Commit History i GIT</h2>
                     <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 1 commit">
                     <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 2 commit>">
                 </div>
-                <div class="video-item">
+                <div class="img-item">
                     <h2>Specific Change i GIT</h2>
                     <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 3 commit">
                     <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 4 commit">
