added main to GIT

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -34,7 +34,7 @@
 </header>
 
 <body>
-    <article id="main">
+    <main>
         <h1>Presentasjon av Github</h1>
             <div class="img-container-github">
                 <div class="img-item">
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </section>         
-    </article>
+    </main>
     
    <!-- Footer Menu -->
    <footer id="footer">
