--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
     </main>
 
     <!-- Footer Menu -->
-    <footer id="footer">
+    <footer>
 
         <div class="moreInfo">
             <div class="row">
