--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -79,7 +79,7 @@
     </main>
     
    <!-- Footer Menu -->
-   <footer id="footer">
+   <footer>
 
     <div class="moreInfo">
         <div class="row">
