cleaing html and adding text accessibility

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
                         </button></a>
             </section>
 
-            </div>
+            
 
             <div id="Hvordan-foregår-undervisningen?" class="tabcontent">
                 <h2>Hvordan foregår undervisningen?</h2>
@@ -1204,7 +1204,7 @@
                 <div id="col3">
                     <span id="icon" class="fa fa-info" alt="Info"></span>
                     <span>
-                        <h3> More Info</h3>
+                        <h3> Mer Info</h3>
                         <div class="more-info-tab">
                             <button id="toggle-tab" class="more-info-tab-button">
                                 <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
