--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -10,9 +10,9 @@
 </head>
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <div class="img-container">
-        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_CFA30B.png" alt="OsloMet Logo">
-    </div>
+    <a href="https://www.oslomet.no/" class="img-container">
+        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+    </a>
     <nav>
         <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
         <div class="dropdown" style="float:right;">
@@ -56,7 +56,7 @@
             <div id="col3">
                 <span id="icon" class="fa fa-info" alt="Info"></span>
                 <span>
-                    <h3> More Info</h3>
+                    <h3> Mer Info</h3>
                     <div class="more-info-tab">
                         <button id="toggle-tab" class="more-info-tab-button">
                             <svg id="toggle-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30"
