--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="dropdown">
             <button class="dropbtn"><i class="fa fa-bars" alt="Meny"></i></button>
             <div class="dropdown-content">
+                <a href="index.html">Matematisk modellering og datavitenskap - ingeniør</a> 
                 <a href="other-pages/activity.html">Activity</a>
                 <a href="other-pages/accessibility.html">Accessibility</a>
                 <a href="other-pages/github.html">GitHub</a>
