--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -18,9 +18,10 @@
         <div class="dropdown" style="float:right;">
             <button class="dropbtn"><i class="fa fa-bars" alt="Meny"></i></button>
             <div class="dropdown-content">
+                <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
                 <a href="accessibility.html">Accessibility</a>
-                 <a href="github.html">GitHub</a> 
-                 <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a> 
+                <a href="activity.html">Activity</a>
+                <a href="github.html">GitHub</a> 
             </div>
           </div>
     </nav>
