more text, p size increase

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -35,18 +35,22 @@
             <p>For å lage en nettside med universell god design, sørget vi for å inkludere alternativ tekst
                 for ikke-tekstlig innhold og bruke sans-serif-fonter for god lesbarhet. Like viktig er struktur og en behagelig 
                 lese opplevelse til nettstedet derfor er det delt inn i flere seksjoner og avsnitt ved hjelp av overskrifter, underoverskrifter,
-                marginer, paddinger og skillelinjer. Vi brukte tabs for å minimere den generelle scrolling for brukeren og opprette
-                en renere og forenklet nettside. 
+                marginer, paddinger og skillelinjer. Vi brukte tabs for å minimere lengden av siden og skaper en renere og forenklet nettside. For å skape en gjennkjennlig stil må layout og navigasjon være konsekvente på alle sidene unntatt 
+                aktivitetssiden, så navigasjonslinjen og footer er nøyaktig den samme og i tillegg ha samme fargepalett. Siden nettsidene
+                skal være brukbare på en rekke skjermstørrelser, brukte vi media queries. Uten det ville føre til en
+                noen problemer. Som et eksempel, skjermbredde forskjellen mellom en telefon og en laptop. Dermed er paddinger og margene strukturen for plassering
+                av noen få elementer må ulikt på de skjermene. Dermed er det viktig at skjermen er responsivt for å ha en god visuell opplevelse. 
+                Nettsiden sørger også for at innhold vises og fungerer på forutsigbare måter med understrekingsfarge og pil-ikoner for å 
+                kunne identifisere koblingene korrekt. Vi inkluderte også ikonene inni footer for å forbedre forutsigbarheten ytterligere. 
             </p>
-            <div class="img-container"></div>
-            <p>Siden nettsidene skal være brukbare på en rekke skjermstørrelser, brukte vi media queries. Uten det ville føre til en
-                noen problemer. Som et eksempel, skjermbredden på en telefon og bærbar PC, paddinger og margene strukturen plassering
-                av noen få elementer må være forskjellige for en god seeropplevelse. Nettsiden sørger også for å lage innhold
-                vises og fungerer på forutsigbare måter med understrekingsfarge og pil-ikoner for å kunne identifisere koblingene korrekt.
-                Vi inkluderte også ikonene inni footer for å forbedre forutsigbarheten ytterligere. For å skape kjent estetikk
-                layout og navigasjon må være konsekvente på alle sidene unntatt aktivitetssiden, så navigasjonslinjen og footer
-                er nøyaktig den samme, nettsidene har samme fargepalett, stilen til hvert element forblir lik.
-            </p>
+            <p>css..</p>
+            <div class="img-container"></div> <!--  css img -->
+            <h2>Automatisert Wawe Test</h2> 
+            <p>text</p>
+            <div class="img-container"></div> <!--  wawe test img -->
+            
+
+
 
 
         </article>
