--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -141,7 +141,7 @@
                         <a class="more-info-links"
                             href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                     </div>
-                    <script src="javascript/index-tabs"></script>
+                    <script src="../javascript/index-tabs"></script>
                 </span>
             </div>
         </div>
