fix few id and classes

--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
         <hr class="separator">
 
         <section id="more-content">
-            <div class=more-content-boxes>
+            <div class="more-content-boxes">
                 <h2>Studiested</h2>
                 <a class="more-info-links" href="https://www.oslomet.no/om/studiested-pilestredet"><svg
                         class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
@@ -1010,7 +1010,7 @@
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>Studiestedet Pilestredet</a>
             </div>
-            <div class=more-content-boxes>
+            <div class="more-content-boxes">
                 <h2>Spørsmål om utdannningen?</h2>
                 <a class="more-info-links" href="https://www.oslomet.no/kontaktskjema#Jeg%20vil%20bli%20student"> <svg
                         class="link-arrow" xmlns="http://www.w3.org/2000/svg" width="19" height="19"
@@ -1019,7 +1019,7 @@
                     </svg>Har du spørsmål om
                     utdanningen, kontakt oss gjennom vårt kontaktskjema.</a>
             </div>
-            <div class=more-content-boxes>
+            <div class="more-content-boxes">
                 <h2>Faglig leder</h2>
                 <img id="img-krhel3944" src="https://gw-oslomet.intark.uh-it.no/ansattbilde/krhel3944"
                     alt="Bilde av Kristoffer Herland Hellton">
@@ -1177,7 +1177,7 @@
     <!-- Footer Menu -->
     <footer>
 
-        <article class="moreInfo">
+        <article class="more-info">
             <div class="row">
                 <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
