changed behaviour of hamburger menu in nav bar with javascript, making it toggle on click.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav>
         <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
         <div class="dropdown">
-            <button class="dropbtn"><i class="fa fa-bars" alt="Meny"></i></button>
-            <div class="dropdown-content">
-                <a href="index.html">Matematisk modellering og datavitenskap - ingeniør</a> 
+            <button class="dropbtn" id="menu-button"><i class="fa fa-bars" alt="Meny"></i></button>
+            <div class="dropdown-content" id="dropdown-menu">
+                <a href="index.html">Matematisk modellering og datavitenskap - ingeniør</a>
                 <a href="other-pages/activity.html">Activity</a>
                 <a href="other-pages/accessibility.html">Accessibility</a>
                 <a href="other-pages/github.html">GitHub</a>
@@ -575,7 +575,7 @@
                             <div class="course-info-box">
                                 <div class="course-info-box-elements">
                                     <h4>Introduksjon til IT-forskning</h4>
-                                    <i class="fa fa-star-o"alt="Stjerne"></i>
+                                    <i class="fa fa-star-o" alt="Stjerne"></i>
                                 </div>
                                 <div class="course-info-box-elements">
                                     <p>DATA3730</p>
@@ -631,7 +631,7 @@
                             <div class="course-info-box">
                                 <div class="course-info-box-elements">
                                     <h4>Testing av programvare</h4>
-                                    <i class="fa fa-star-o"alt="Stjerne"></i>
+                                    <i class="fa fa-star-o" alt="Stjerne"></i>
                                 </div>
                                 <div class="course-info-box-elements">
                                     <p>ADTS2310</p>
@@ -644,7 +644,7 @@
                             <div class="course-info-box">
                                 <div class="course-info-box-elements">
                                     <h4>Datanettverk og skytjenester</h4>
-                                    <i class="fa fa-star-o"alt="Stjerne"></i>
+                                    <i class="fa fa-star-o" alt="Stjerne"></i>
                                 </div>
                                 <div class="course-info-box-elements">
                                     <p>DATA2410</p>
@@ -670,7 +670,7 @@
                             <div class="course-info-box">
                                 <div class="course-info-box-elements">
                                     <h4>Avansert modellering og beregninger</h4>
-                                    <i class="fa fa-star-o"alt="Stjerne"></i>
+                                    <i class="fa fa-star-o" alt="Stjerne"></i>
                                 </div>
                                 <div class="course-info-box-elements">
                                     <p>MAMO2200</p>
@@ -1181,7 +1181,9 @@
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
 
                     <address class="address-font">
-                        <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9"><h3>Oslo Metropolitan University</h3></a>
+                        <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
+                            <h3>Oslo Metropolitan University</h3>
+                        </a>
                         <p>Storbyuniversitetet</p>
                         Postboks 4, St. Olavs plass
                         0130 Oslo
@@ -1245,7 +1247,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook" ></a>
+                    <a href="https://www.facebook.com/oslomet/" class="fa fa-facebook" alt="Facebook"></a>
                 </li>
 
                 <li>
