fixed links in all pages

--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -15,10 +15,10 @@
     </a>
     <nav>
         <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
-        <div class="dropdown" style="float:right;">
-            <button class="dropbtn"><i class="fa fa-bars" alt="Meny"></i></button>
-            <div class="dropdown-content">
-                <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>      
+        <div class="dropdown">
+            <button class="dropbtn" id="menu-button"><i class="fa fa-bars" alt="Meny"></i></button>
+            <div class="dropdown-content" id="dropdown-menu">
+                <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
                 <a href="activity.html">Activity</a>
                 <a href="accessibility.html">Accessibility</a>
                 <a href="github.html">GitHub</a>
