--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -32,31 +32,31 @@
     <!-- Footer Menu -->
     <footer>
 
-        <div class="moreInfo">
+        <article class="more-info">
             <div class="row">
-                <div id="col1">
+                <section id="col1">
                     <span id="icon" class="fa fa-map-marker" alt="Map markering"></span>
 
-                    <span>
+                    <address class="address-font">
                         <a class="more-info-links" href="https://maps.app.goo.gl/KMtNLzg2X4wWKpAG9">
                             <h3>Oslo Metropolitan University</h3>
                         </a>
                         <p>Storbyuniversitetet</p>
                         Postboks 4, St. Olavs plass
                         0130 Oslo
-                    </span>
-                </div>
+                    </address>
+                </section>
 
-                <div id="col2">
+                <section id="col2">
                     <span id="icon" class="fa fa-phone" alt="Telefon"></span>
 
-                    <span>
+                    <address class="address-font">
                         <h3>Kontakt oss</h3>
                         <p>Tlf.: 67 23 50 00</p>
-                    </span>
-                </div>
+                    </address>
+                </section>
 
-                <div id="col3">
+                <section id="col3">
                     <span id="icon" class="fa fa-info" alt="Info"></span>
                     <span>
                         <h3> Mer Info</h3>
@@ -90,13 +90,13 @@
                             <a class="more-info-links"
                                 href="https://www-admin.oslomet.no/admin/view/content/58148">Admin</a>
                         </div>
-                        <script src="../javascript/index-tabs"></script>
+                        <script src="javascript/index-tabs"></script>
                     </span>
-                </div>
+                </section>
             </div>
-        </div>
+        </article>
         <!-- Social Media links -->
-        <div class="mediabox">
+        <nav class="mediabox">
 
             <ul class="media">
                 <li>
@@ -114,7 +114,7 @@
                     <a href="https://www.instagram.com/oslomet/?hl=nb" class="fa fa-instagram" alt="Instagram"></a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </footer>
 
 </body>
