--- a/other-pages/github.html
+++ b/other-pages/github.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="img-item">
                     <h2>Specific Change i GIT</h2>
-                    <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 3 commit">
+                    <img src="../images/git bilde 1.png" alt="bilde 3 commit">
                     <img src="https://media.istockphoto.com/id/1320815200/photo/wall-black-background-for-design-stone-black-texture-background.jpg?s=612x612&w=0&k=20&c=hqcH1pKLCLn_ZQ5vUPUfi3BOqMWoBzbk5-61Xq7UMsU=" alt="bilde 4 commit">
                 </div>
             </div>
