--- a/index.html
+++ b/index.html
@@ -1033,11 +1033,11 @@
         </section>
         <section id="other-studies">
             <h2>Kanskje du også er interessert i disse?</h2>
-            <div id="course-cards">
-                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi">
-                    <div id="course-glance">
+            <div class="course-cards">
+                <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi">
+                    <div class="course-glance">
                         <h3>Anvendt Datateknologi</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
@@ -1048,10 +1048,10 @@
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
                 </a>
-                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior">
-                    <div id="course-glance">
+                <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/bioteknologi-kjemiingenior">
+                    <div class="course-glance">
                         <h3>Bioteknologi- og kjemiingeniør</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
@@ -1062,10 +1062,10 @@
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
                 </a>
-                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/byggingenior">
-                    <div id="course-glance">
+                <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/byggingenior">
+                    <div class="course-glance">
                         <h3>Byggingeniør</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
@@ -1076,10 +1076,10 @@
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
                 </a>
-                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/dataingenior">
-                    <div id="course-glance">
+                <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/dataingenior">
+                    <div class="course-glance">
                         <h3>Dataingeiør</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
@@ -1090,10 +1090,10 @@
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
                 </a>
-                <a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/elektronikkingenior">
-                    <div id="course-glance">
+                <a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/elektronikkingenior">
+                    <div class="course-glance">
                         <h3>Elektronikkingeniør</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
@@ -1103,10 +1103,10 @@
                         viewBox="0 0 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-                </a><a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/informasjonsteknologi">
-                    <div id="course-glance">
+                </a><a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/informasjonsteknologi">
+                    <div class="course-glance">
                         <h3>Informasjonsteknologi</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
@@ -1116,10 +1116,10 @@
                         viewBox="0 0 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-                </a><a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/maskiningenior">
-                    <div id="course-glance">
+                </a><a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/maskiningenior">
+                    <div class="course-glance">
                         <h3>Maskiningeniør</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
@@ -1129,10 +1129,10 @@
                         viewBox="0 0 24 24">
                         <polygon points="7 7 15.586 7 5.293 17.293 6.707 18.707 17 8.414 17 17 19 17 19 5 7 5 7 7" />
                     </svg>
-                </a><a id="course-glance-container" href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior">
-                    <div id="course-glance">
+                </a><a class="course-glance-container" href="https://www.oslomet.no/studier/tkd/tre-termin-ingenior">
+                    <div class="course-glance">
                         <h3>Tre-terminsordning til ingeniør</h3>
-                        <div id="course-glance-points">
+                        <div class="course-glance-points">
                             <p>Bachelorprogram</p>
                             <p>Pilestredet i Oslo</p>
                             <p>Heltid</p>
