lorem in accessibility

--- a/other-pages/accessibility.html
+++ b/other-pages/accessibility.html
@@ -54,7 +54,14 @@
             <p>css..</p>
             <div class="img-container"></div> <!--  css img -->
             <h2>Automatisert Wawe Test</h2>
-            <p>text</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur similique eum neque obcaecati
+                perspiciatis eveniet recusandae totam repellendus tempore, voluptas ex iure dolore, odit, dignissimos
+                rem veritatis deserunt? Temporibus deserunt molestiae autem enim cupiditate suscipit laboriosam. Sequi
+                aliquid praesentium illum fugit? Voluptatem eius quo quis dicta, ab enim, praesentium saepe quod cumque
+                sed sequi placeat. Inventore harum sed expedita beatae quisquam odit eveniet esse reiciendis, dolorum
+                suscipit voluptatum exercitationem iusto itaque illum quidem officiis? Est consectetur beatae iste,
+                obcaecati nihil quo suscipit dolor quasi aut magnam laborum ducimus vitae nostrum et possimus minima
+                ratione hic impedit, modi harum aliquid atque?</p>
             <div class="img-container"></div> <!--  wawe test img -->
 
 
