changed name on link

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -19,7 +19,7 @@
         <div class="dropdown" style="float:right;">
             <button class="dropbtn"><i class="fa fa-bars"></i></button>
             <div class="dropdown-content">
-                 <a href="../index.html">Oslomet nettside</a> 
+                 <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a> 
                  <a href="accessibility.html">Accessibility</a> 
                  <a href="github.html">Github</a> 
 
