--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -157,7 +157,7 @@
             </section>
 
         </article>
-        <script src="javascript/index-tabs"></script>
+        <script src="../javascript/index-tabs"></script>
     </main>
 
     <div id="course-cards">
@@ -233,7 +233,7 @@
             </div>
         </div>
         
-        
+ -->
 </body>
 
 </html>
