--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -12,6 +12,9 @@
 
 <header>
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
+    <a href="https://www.oslomet.no/">
+        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+    </a>
     <nav>
         <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
         <div class="dropdown">
