changed color of icons in nav

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -10,16 +10,16 @@
     <title> guide </title>
 </head>
 
-<header>
+<header id="header-activity">
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
     <a href="https://www.oslomet.no/" class="img-container">
         <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
     </a>
     <nav>
-        <a id="search-button" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
-        <div class="dropdown">
-            <button class="dropbtn" id="menu-button"><i class="fa fa-bars" alt="Meny"></i></button>
-            <div class="dropdown-content" id="dropdown-menu">
+        <a id="search-button-activity" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
+        <div class="dropdown-activity">
+            <button class="dropbtn-activity" id="menu-button"><i class="fa fa-bars" alt="Meny"></i></button>
+            <div class="dropdown-content-activity" id="dropdown-menu">
                 <a href="../index.html">Matematisk modellering og datavitenskap - ingeniør</a>
                 <a href="accessibility.html">Accessibility</a>
                 <a href="github.html">Github</a>
