changed logo of activity site

--- a/other-pages/activity.html
+++ b/other-pages/activity.html
@@ -12,8 +12,8 @@
 
 <header id="header-activity">
     <!-- img-container simply puts the img above the navigation elements so .nav is centered on page. -->
-    <a href="https://www.oslomet.no/" class="img-container">
-        <img id="header-logo" src="../images/Logo_of_Oslo_Metropolitan_University_ffd500.png" alt="OsloMet Logo">
+    <a href="#" class="img-container">
+        <img id="header-logo-activity" src="../images/favicon_io/android-chrome-192x192.png">
     </a>
     <nav>
         <a id="search-button-activity" href="https://www.oslomet.no/s?q"><i class="fa fa-search" alt="Søk"></i></a>
